액션 스크립트 버전 변경

--- a/.github/workflows/dnrule.yml
+++ b/.github/workflows/dnrule.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: dnrule
-        uses: zxcv9203/dnRule@v.0.0.0
+        uses: zxcv9203/dnRule
