--- a/.github/workflows/dnrule.yml
+++ b/.github/workflows/dnrule.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: dnrule
-        uses: zxcv9203/dnRule
+        uses: zxcv9203/dnRule@v0.0.0-alpha
