--- a/.github/workflows/dnrule.yml
+++ b/.github/workflows/dnrule.yml
@@ -12,4 +12,4 @@ jobs:
       - name: dnrule
         uses: zxcv9203/dnRule@test1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
