--- a/.github/workflows/dnrule.yml
+++ b/.github/workflows/dnrule.yml
@@ -4,13 +4,12 @@ on:
   schedule:
     - cron: '0 0 * * *'
 
-
 jobs:
   dnrule:
     runs-on: ubuntu-latest
     steps:
       - name: dnrule
-        uses: zxcv9203/dnRule@test
+        uses: zxcv9203/dnRule@v1.0.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           github-repository: ${{ secrets.GITHUB_REPOSITORY }}
