라벨을 변경할 수 있도록 쓰기 권한 추가

--- a/.github/workflows/dnrule.yml
+++ b/.github/workflows/dnrule.yml
@@ -3,7 +3,8 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
-
+permissions:
+  issues: write
 jobs:
   dnrule:
     runs-on: ubuntu-latest
