--- a/.github/workflows/dnrule.yml
+++ b/.github/workflows/dnrule.yml
@@ -14,4 +14,4 @@ jobs:
         uses: zxcv9203/dnRule@v1.0.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          github-repository: ${{ secrets.GITHUB_REPOSITORY }}
+          github-repository: ${{ github.repository }}
